--- a/Tablas/codigo/Ejer4.html
+++ b/Tablas/codigo/Ejer4.html
@@ -10,12 +10,12 @@
 <body>
     <h1>Video de reformas</h1>
     <h2>Construir en un terreno propio</h2>
-    <object type="video/mp4" data="../Video/Пара построила НЕДОРОГОЙ и ОЧЕНЬ КРАСИВЫЙ ЗАБОР своими руками - Timelapse. Пошаговая инструкция.mp4.crdownload">
-        <param name="FileName" value="../Video/Пара построила НЕДОРОГОЙ и ОЧЕНЬ КРАСИВЫЙ ЗАБОР своими руками - Timelapse. Пошаговая инструкция.mp4.crdownload">
+    <object class ="video1"  type="video/mp4" data="../Video/cuánto-cuesta-una-reforma-integral-descargarvideoshn.mp4">
+        <param name="FileName" value="../Video/cuánto-cuesta-una-reforma-integral-descargarvideoshn.mp4">
         <param name="quality" value="high">
         </object>
 
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/6x6G4xBJbsQ"
+        <iframe class="video" src="https://www.youtube.com/embed/6x6G4xBJbsQ"
         title="YouTube video player" frameborder="0" allow="accelerometer; autoplay;
         clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
