--- a/Tablas/codigo/Ejerform1.html
+++ b/Tablas/codigo/Ejerform1.html
@@ -11,15 +11,16 @@
 
 <body>
     <h1>Crea tu cuenta de acceso</h1>
-    <div id="formu">
-        <form method="POST"></form>
-        Nombre: <input type="text" name="usuario"> <br>
-        Contraseña: <input type="password" name="pass"><br>
-        Edad: <input type="text" name="edad" checked><br>
+    <form method="POST">
+        <label form="Nombre">Nombre:</label> 
+        <input type="text" name="usuario"> <br>
+        <label form="Contraseña">Contraseña:</label>
+        <input type="password" name="pass"><br>
+        <label form="Edad">Edad:</label> 
+        <input type="text" name="edad" checked><br>
         <input type="checkbox"> Acepto las condiciones de uso <br>
         <input type="button" value="Alta">
-        </form>
-    </div>
+    </form>
 </body>
 </body>
 
