--- a/Tablas/codigo/Ejerform4.html
+++ b/Tablas/codigo/Ejerform4.html
@@ -10,40 +10,20 @@
 </head>
 
 <body>
-    <h1>El señor de los anillos</h1>
-    <div id="formu">
-        <form method="POST">
-            <label form="Nombre">Nombre:</label>
-            <input type="text" name="usuario">
-            <label form="Numero">Telefono:</label>
-            <input type="text" name="Numero" checked>
-    </div><br>
-    <div id="formu2">
-        <form method="POST">
-            <b>Con cual de los personajes de la película te identificas:</b><br>
-            <label form="frodo">Frodo Bolsón </label>
-            <input type="checkbox" name="name" checked>
-            <label form="Aragom">Aragom</label>
-            <input type="checkbox" name="name" checked>
-            <label form="Samsagaz">Samsagaz</label>
-            <input type="checkbox" name="name" checked>
-            <label form="Golum">Golum</label>
-            <input type="checkbox" name="name" checked><br>
-            <b>La pelicula te ha parecido:</b><br>
-            <label form="Excelente">Excelente</label>
-            <input type="radio" name="categoria" checked>
-            <label form="Buena">Buena</label>
-            <input type="radio" name="categotia" checked>
-            <label form="Normalilla">Normalilla</label>
-            <input type="radio" name="categoria" checked>
-            <label form="Mala">Mala</label>
-            <input type="radio" name="categoria" checked>
-            <label form="Pésima">Pésima</label>
-            <input type="radio" name="categoria" checked>
-        </form>
-    </div>
-    <div id="enviar">
-        <input type="button" value="Enviar">
-    </div>
+    <h1>Crea tu cuenta de acceso</h1>
+    <form method="POST">
+        <label form="Nombre">Nombre:</label> 
+        <input type="text" name="usuario"> <br>
+        <label form="Contraseña">Contraseña:</label>
+        <input type="password" name="pass"><br>
+        <label form="Edad">Edad:</label> 
+        <input type="text" name="edad" checked><br>
+        <input type="checkbox"> Acepto las condiciones de uso <br><br>
+        <label class="titu">Comentarios:<br>
+        <textarea rows="5" cols="30"></textarea><br>
+        <input type="button" value="Alta">
+    </form>
 </body>
+</body>
+
 </html>
