--- a/TipoExamen/Codigo/Examen.html
+++ b/TipoExamen/Codigo/Examen.html
@@ -98,12 +98,21 @@
             </form>
         </div>
     </div>
-    <hr class="linea">
+    <hr class="linea1">
     <div id="bloquepdf">
         <h1 class="titulopdf">PLAN DE ESTUDIOS</h1><br>
         <iframe src="../DocPdf/planEstudios (1).pdf"></iframe>
     </div>
     <hr class="linea2">
+    <h1 class="titulomap1">MAS INFORMACIÓN</h1>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!
+    1m3!1d3012.9702058375315!2d-5.661593348726262!3d40.96023153022681!
+    2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd3f266cd124909d%
+    3A0x5cd302f38c14e616!2sColegio%20Calasanz%20de%20Salamanca!5e0!3m2!1ses
+    !2ses!4v1669030087399!5m2!1ses!2ses" 
+    width="600" height="450" style="border:0;" 
+    allowfullscreen="" loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade"></iframe>
 </body>
 
 </html>
