--- a/TipoExamen/Codigo/Practicaexa.html
+++ b/TipoExamen/Codigo/Practicaexa.html
@@ -22,18 +22,15 @@
                     <th>Course Number</th>
                     <th>Course Title</th>
                     <th>Semester Taken</th>
-                    
                 </tr>
                 <tr>
-                    <td>8:15-9:10</td>
-                    <td>FOL</td>
-                    <td>FOL</td>
-                    <td>LLMM</td>
-                    <td rowspan="3">Programación</td>
-                    <td rowspan="2">LLMM</td>
+                    <td colspan="3">Listener</td>
+                   
+
+
                 </tr>
                 <tr>
-                    <td>9:10-10:05</td>
+                    <td>9:</td>
                     <td rowspan="2">Programación</td>
                     <td>BBDD</td>
                     <td rowspan="2">BBDD</td>
@@ -56,12 +53,22 @@
         <form method="POST">
             <label form="Nombre">Nombre:</label>
             <input type="text" name="usuario"> <br>
-            <label form="Email">Correo electrónico:</label>
+            <label form="Email">Phylum:</label>
             <input type="text" name="correo" checked><br>
-            <label class="titu">Preguntas:<br>
-                <textarea class="cuadrotext1" rows="10" cols="85"></textarea><br>
-                <input class="boton1" type="button" value="Enviar">
+            <label form="Nombre">Gender:</label><br>
+            <input type="button" value="Enviar">
         </form>
+        <div id="bloque1">
+            <h1 class="titulo1">Job Details:</h1>
+            <div id="bloque2">
+        <form>
+            <label form="Nombre">Job Title:</label>
+            <input type="text" name="usuario"> <br> 
+            <label class="titu">Descripción:
+            <textarea rows="5" cols="35"></textarea><br>
+    </form>
+</div>
+</div>
     </div>
 </div>
 </body>
