--- a/Tablas/codigo/Ejerform5.html
+++ b/Tablas/codigo/Ejerform5.html
@@ -12,13 +12,13 @@
 <body>
     <form method="POST">
         <label for= "Señor">Señor :</label> 
-        <input type="radio">
+        <input type="radio" >
         <label for= "Señora">Señora:</label>:
-        <input type="radio"><br>
+        <input type="radio" ><br>
         <label for="Nombre">Nombre:</label>
-        <input type="text" name="usuario"><br>
+        <input type="text" name="usuario" placeholder="Introduzaca nombre" required><br>
         <label for ="Email">Email:</label> 
-        <input type="text" name="correo" checked><br>
+        <input type="text" name="correo" placeholder="Introduzaca correo" required><br>
         <label for="rango">Rango de edad:</label>
         <select name="select" size="1">
             <option value="" selected>Entre 18 y 19</option>
@@ -27,7 +27,7 @@
             <option value="opcion3">Mayor de 60</option>
         </select><br>
         <input type="button" value="Enviar">
-        <input type="button" value="Limpiar">
+        <input type="submit" value="Limpiar">
     </form>
 </body>
 </body>
