--- a/Tablas/codigo/indexform.html
+++ b/Tablas/codigo/indexform.html
@@ -11,11 +11,11 @@
     <h1> Date de alta en nuestro sitio web </h1>
     <form action="#" method="get">
         <label for="nombre"> Nombre </label>
-        <input type="text" name="nombre" id="nombre">
+        <input type="text" name="nombre" id="nombre" placeholder="introduzca su nombre" required>
         <label for="usuario"> Nombre de usuario </label>
         <input type="text" name="usuario" id="usuario">
         <label for="contraseña"> Contraseña </label>
-        <input type="password" name="pass" id="pass">
+        <input type="password" name="pass" id="pass" placeholder="introduzca contraseña" required>
         <label for="foto"> Adjuntar foto </label>
         <input button="file" name="foto" id="foto">
         <div>
