--- a/TipoExamen/Codigo/Examen.html
+++ b/TipoExamen/Codigo/Examen.html
@@ -16,7 +16,7 @@
     </div>
     <div id="cuadrogrande">
         <div id="cuadro2">
-            <h1 class="titulotabla1">HORARIO 1º DAW</h1>
+            <h1 >HORARIO 1º DAW</h1>
             <table class="tabla1">
                 <tr>
                     <th>Horas</th>
@@ -85,8 +85,8 @@
             </table>
         </div>
         <div id="cuadro3">
-            <h1 class="tituloformu1">MAS INFORMACIÓN</h1>
-            <ul class="cabezaformu1">Solicita mas información rellenando el siguiente cuestionario: </ul>
+            <h1 >MAS INFORMACIÓN</h1>
+            <p class="titulo">Solicita mas información rellenando el siguiente cuestionario:</p>  
             <form method="POST">
                 <label form="Nombre">Nombre:</label>
                 <input type="text" name="usuario"> <br>
@@ -104,7 +104,7 @@
         <iframe src="../DocPdf/planEstudios (1).pdf"></iframe>
     </div>
     <hr>
-    <h1 class="titulomap1">LOCALIZACÓN</h1>
+    <h1>LOCALIZACÓN</h1>
     <div id="bloquemapa">
     <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!
     1m3!1d3012.9702058375315!2d-5.661593348726262!3d40.96023153022681!
