--- a/Tablas/codigo/Ejerform2.html
+++ b/Tablas/codigo/Ejerform2.html
@@ -16,9 +16,9 @@
         <label for= "Señora">Señora:</label>:
         <input type="radio"><br>
         <label for="Nombre">Nombre:</label>
-        <input type="text" name="usuario"><br>
+        <input type="text" name="usuario" required><br>
         <label for ="Email">Email:</label> 
-        <input type="text" name="correo" checked><br>
+        <input type="text" name="correo" ><br>
         <input type="button" value="Enviar">
         <input type="button" value="Limpiar">
     </form>
