--- a/TipoExamen/Codigo/Practicaexa.html
+++ b/TipoExamen/Codigo/Practicaexa.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,49 +8,50 @@
     <title>Práctica exámen</title>
     <link rel="stylesheet" href="../Estilo/Practicaexa.css">
 </head>
+
 <body>
     <div>
-    <h1>Dog D. Dog</h1>
-    <img class="perrito" src="../Imagen/Perrito.jpg">
-    <h2>About</h2>
-    Woof woof!
-    Hi, I'm Dog. I love. User Interface Design.
-    <h2>Courses</h2>
-    Here are some courses I've taken:
-    
-            <table class="tabla1">
-                <tr>
-                    <th>Course Number</th>
-                    <th>Course Title</th>
-                    <th>Semester Taken</th>
-                </tr>
-                <tr>
-                    <td colspan="3">Listener</td>
-                   
+        <h1>Dog D. Dog</h1>
+        <img class="perrito" src="../Imagen/Perrito.jpg">
+        <h2>About</h2>
+        Woof woof!
+        Hi, I'm Dog. I love. User Interface Design.
+        <h2>Courses</h2>
+        Here are some courses I've taken:
+
+        <table class="tabla1">
+            <tr>
+                <th>Course Number</th>
+                <th>Course Title</th>
+                <th>Semester Taken</th>
+            </tr>
+            <tr>
+                <td colspan="3">Listener</td>
 
 
-                </tr>
-                <tr>
-                    <td>9:</td>
-                    <td rowspan="2">Programación</td>
-                    <td>BBDD</td>
-                    <td rowspan="2">BBDD</td>
-                </tr>
-                <tr>
-                    <td>10:05-1100</td>
-                    <td>LLMM</td>
-                    <td>EED</td>
-                </tr>
-                <tr>
-                    <td>11:00 -11:30</td>
-                    <td colspan="5"></td>
-                </tr>
-            </table>
-            <h2>About</h2>
-            Woof woof!
-            Hi, I'm Dog. I love. User Interface Design.
-            <h2>Courses</h2>
-            Here are some courses I've taken:
+
+            </tr>
+            <tr>
+                <td>9:</td>
+                <td rowspan="2">Programación</td>
+                <td>BBDD</td>
+                <td rowspan="2">BBDD</td>
+            </tr>
+            <tr>
+                <td>10:05-1100</td>
+                <td>LLMM</td>
+                <td>EED</td>
+            </tr>
+            <tr>
+                <td>11:00 -11:30</td>
+                <td colspan="5"></td>
+            </tr>
+        </table>
+        <h2>About</h2>
+        Woof woof!
+        Hi, I'm Dog. I love. User Interface Design.
+        <h2>Courses</h2>
+        Here are some courses I've taken:
         <form method="POST">
             <label form="Nombre">Nombre:</label>
             <input type="text" name="usuario"> <br>
@@ -61,15 +63,20 @@
         <div id="bloque1">
             <h1 class="titulo1">Job Details:</h1>
             <div id="bloque2">
-        <form>
-            <label form="Nombre">Job Title:</label>
-            <input type="text" name="usuario"> <br> 
-            <label class="titu">Descripción:
-            <textarea rows="5" cols="35"></textarea><br>
-    </form>
-</div>
-</div>
+                <div id="uno">
+                    <label form="Nombre">Job Title:</label>
+                    <input type="text" name="usuario"> <br>
+                    <label form="titu">Descripción:</label>
+                    <textarea rows="5" cols="35"></textarea><br>
+                    <label form="Nombre"></label>
+                    Brief Descripcion should have atmost 500 characters<br>
+                    <label form="Nombre">Company Name:</label>
+                    <input type="text" name="usuario"> <br>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
+    </div>
 </body>
+
 </html>
