--- a/ejemplos HTML5/Codigo/Practihtml5.html
+++ b/ejemplos HTML5/Codigo/Practihtml5.html
@@ -10,30 +10,24 @@
 </head>
 
 <body>
-    <div id="blque">
-        <div id="bloque1">
-            <h1>HTML4</h1>
-            <div id="header"></div>
-            <div id="nav"></div>
-            <div>
-                <div id="content"></div>
-                <div id="aside"></div>
-            </div>
-            <div id="footer"></div>
+    <div id="bloque">
+        <h1>HTML4</h1>
+        <div id="bloque1" class="estilo">
+            <div id="bloque1-1" class="estilo"></div>
+            <div id="bloque1-2" class="estilo"></div>
+            <div id="bloque1-3" class="estilo"></div>
+            <div id="bloque1-4" class="estilo"></div>
+            <div id="bloque1-5" class="estilo"></div>
         </div>
-        <div id="bloque2">
-            <div>
-                <h1>HTML5</h1>
-                <div id="header"></div>
-                <div id="nav"></div>
-                <div>
-                    <div id="content"></div>
-                    <div id="aside"></div>
-                </div>
-                <div id="footer"></div>
-            </div>
+        <h1>HTML4</h1>
+        <div id="bloque2" class="estilo">
+            <div id="bloque1-1" class="estilo"></div>
+            <div id="bloque1-2" class="estilo"></div>
+            <div id="bloque1-3" class="estilo"></div>
+            <div id="bloque1-4" class="estilo"></div>
+            <div id="bloque1-5" class="estilo"></div>
         </div>
+
     </div>
 </body>
 
-</html>
