--- a/ejemplos HTML5/Codigo/Practihtml5.html
+++ b/ejemplos HTML5/Codigo/Practihtml5.html
@@ -11,23 +11,25 @@
 
 <body>
     <div id="bloque">
-        <h1>HTML4</h1>
-        <div id="bloque1" class="estilo">
-            <div id="bloque1-1" class="estilo"></div>
-            <div id="bloque1-2" class="estilo"></div>
-            <div id="bloque1-3" class="estilo"></div>
-            <div id="bloque1-4" class="estilo"></div>
-            <div id="bloque1-5" class="estilo"></div>
+        <div id="block1">
+            <h1>HTML4</h1>
+            <div id="bloque1" class="estilo">
+                <div id="bloque1-1" class="estilo"></div>
+                <div id="bloque1-2" class="estilo"></div>
+                <div id="bloque1-3" class="estilo"></div>
+                <div id="bloque1-4" class="estilo"></div>
+                <div id="bloque1-5" class="estilo"></div>
+            </div>
         </div>
-        <h1>HTML4</h1>
-        <div id="bloque2" class="estilo">
-            <div id="bloque1-1" class="estilo"></div>
-            <div id="bloque1-2" class="estilo"></div>
-            <div id="bloque1-3" class="estilo"></div>
-            <div id="bloque1-4" class="estilo"></div>
-            <div id="bloque1-5" class="estilo"></div>
+        <div id="block2">
+            <h1 class="titu">HTML4</h1>
+            <div id="bloque2" class="estilo">
+                <div id="bloque1-1" class="estilo"></div>
+                <div id="bloque1-2" class="estilo"></div>
+                <div id="bloque1-3" class="estilo"></div>
+                <div id="bloque1-4" class="estilo"></div>
+                <div id="bloque1-5" class="estilo"></div>
+            </div>
         </div>
-
     </div>
 </body>
-
