--- a/ejemplos HTML5/Codigo/Practihtml5.html
+++ b/ejemplos HTML5/Codigo/Practihtml5.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prcatica 1</title>
     <link rel="stylesheet" href="../css/Practihtml5.css">
 </head>
 
@@ -22,13 +22,16 @@
             </div>
         </div>
         <div id="block2">
-            <h1 class="titu">HTML4</h1>
+            <h1 class="titu">HTML5</h1>
             <div id="bloque2" class="estilo">
                 <div id="bloque1-1" class="estilo"></div>
                 <div id="bloque1-2" class="estilo"></div>
-                <div id="bloque1-3" class="estilo"></div>
+                <div id="bloque1-3-1" class="estilo"></div>
                 <div id="bloque1-4" class="estilo"></div>
+                <div id="bloque1-6" class="estilo"></div>
+                
                 <div id="bloque1-5" class="estilo"></div>
+                
             </div>
         </div>
     </div>
