--- a/ejemplos HTML5/Codigo/Ejemplo2.html
+++ b/ejemplos HTML5/Codigo/Ejemplo2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,24 +8,32 @@
     <title>Ejercicio2</title>
     <link rel="stylesheet" href="../css/Ejemplo2.css">
 </head>
+
 <body>
-    <fieldset>
-        <legend>Datos</legend>
-        <label for ="Mail="> Mail </label>
-        <input type="email" id="email"><br><br>
-        <label for ="Web="> Web </label>
-        <input type="email" id="email"><br><br>
-        <label for ="number"> Número de licencia </label>
-        <input type="number" id="number" placeholder="1 - 10" min="1" max="10" step="1" >
-    </fieldset> 
-    <fieldset>
-        <legend>Detalle de Tarjeta</legend>
-        <label for ="Number="> Número de tarjeta </label>
-        <input type="email" id="email"><br><br>
-        <label for ="Number="> CVV  </label>
-        <input type="Number" id="Number" placeholder="3 dígitos" min="1" max="3" size="20" ><br><br>
-        <label for ="number"> Fecha de caducidad </label>
-        <input type="number" id="number" placeholder="diciembre de 2020" min="1" max="10" step="1" >
-    </fieldset> 
+    <h1>Formulario HTML 5</h1>
+    <form action="#">
+        <fieldset>
+            <legend>Datos</legend>
+            <label> Mail </label>
+            <input type="email" id="email" placeholder="nombre@gmail.com"><br><br>
+            <label> Web </label>
+            <input type="url" id="email" placeholder="www.pagina.com"><br><br>
+            <label> Número de licencia </label>
+            <input type="number" id="number" placeholder="1 - 10" min="1" max="10" step="1">
+        </fieldset>
+        <fieldset>
+            <legend>Detalle de Tarjeta</legend>
+            <label> Número de tarjeta </label>
+            <input type="text" placeholder="3 dígitos" pattern="\d{16}" maxlength="16"><br><br>
+            <label>CVV</label>
+            <input type="text" placeholder="3 dígitos" pattern="\d{3}" maxlength="3"><br><br>
+            <label> Fecha de caducidad </label>
+            <input type="month" value="2022-12">
+        </fieldset>
+        <br>
+        <input type="submit" value="enviar">
+        <input type="reset" value="borrar">
+    </form>
 </body>
+
 </html>
