--- a/ejemplos HTML5/Codigo/Ejemplo HTML5 secciones.html
+++ b/ejemplos HTML5/Codigo/Ejemplo HTML5 secciones.html
@@ -2,7 +2,7 @@
 <html lang="es">  
   <head>    
     <title>Ejemplo de maquetación con HTML5</title>
-    <<link rel="stylesheet" href="../css/style.css">>
+    <link rel="stylesheet" href="../css/style.css">
   </head>  
   <body>    
     <header>
